# thewall

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
api/: db_logger.py  urls.py
api/migrations/: 0001_initial.py
api/models/: setup_model.py  work_model.py
api/views/: cost_view.py  setup_view.py
data/logs/: log.multithread.txt  log.singlethread.txt
djangoapp/: server.py  settings.py
tests/: test_api.py
thewall/: cli.py  domains.py  team_pool.py
thewall/lib/: iterator.py
thewall/logs/: base_log.py  file_log.py
